Corrigindo Deployment-backend e arrumando index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
   <div id="output"></div>
 
   <script>
-    const API = "http://localhost:8000"; // Altere se necessário
+    const API = 'http://desafio-jenkins-service/api';
 
     async function getColor() {
       const res = await fetch(`${API}/color`);
