--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
   <div id="output"></div>
 
   <script>
-    const API = 'http://desafio-jenkins-service/api';
+    const API = "http://localhost:30001";
 
     async function getColor() {
       const res = await fetch(`${API}/color`);
